# backend/swagger-output.json
@@ -292,6 +292,25 @@
           "moneyRoutes"
         ]
       }
+    },
+    "/moneyRoutes/deleteAllTransactions": {
+      "delete": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "moneyRoutes"
+        ]
+      }
     }
   }
 }
